--- a/main.ipynb
+++ b/main.ipynb
@@ -53,6 +53,10 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load variables from .env file\n",
+    "load_dotenv()\n",
     "\n",
     "# Load API keys from environment variables\n",
     "TWITTER_BEARER_TOKEN = os.getenv(\"TWITTER_BEARER_TOKEN\", \"your-twitter-token-here\")\n",
